--- a/src/app/layout/main/main.html
+++ b/src/app/layout/main/main.html
@@ -1,112 +1,10 @@
-<main>
-  <div class="content-wrapper">
-    <p>Welcome to the Miele Launderette!</p>
-    <section>
-  <div class="example-label">Text</div>
-  <div class="example-button-row">
-    <button matButton color="primary">Basic</button>
-    <button matButton disabled>Disabled</button>
-    <a matButton href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
-<mat-divider/>
-<section>
-  <div class="example-label">Elevated</div>
-  <div class="example-button-row">
-    <button matButton="elevated" color="secondary">Basic</button>
-    <button matButton="elevated" disabled>Disabled</button>
-    <a matButton="elevated" href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
-<mat-divider/>
-<section>
-  <div class="example-label">Outlined</div>
-  <div class="example-button-row">
-    <button matButton="outlined" color="primary">Basic</button>
-    <button matButton="outlined" disabled>Disabled</button>
-    <a matButton="outlined" href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
-<mat-divider/>
-<section>
-  <div class="example-label">Filled</div>
-  <div class="example-button-row">
-    <button matButton="filled" color="primary">Basic</button>
-    <button matButton="filled" disabled>Disabled</button>
-    <a matButton="filled" href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
-<mat-divider/>
-<section>
-  <div class="example-label">Tonal</div>
-  <div class="example-button-row">
-    <button matButton="tonal" color="primary">Basic</button>
-    <button matButton="tonal" disabled>Disabled</button>
-    <a matButton="tonal" href="https://www.google.com/" target="_blank">Link</a>
-  </div>
-</section>
-<mat-divider/>
-<section>
-  <div class="example-label">Icon</div>
-  <div class="example-button-row">
-    <div class="example-flex-container">
-      <button matIconButton aria-label="Example icon button with a vertical three dot icon">
-        <mat-icon>more_vert</mat-icon>
-      </button>
-      <button matIconButton disabled aria-label="Example icon button with a open in new tab icon">
-        <mat-icon>open_in_new</mat-icon>
-      </button>
-    </div>
-  </div>
-</section>
-<mat-divider/>
-<section>
-  <div class="example-label">Floating Action Button (FAB)</div>
-  <div class="example-button-row">
-    <div class="example-flex-container">
-      <button matFab aria-label="Example icon button with a delete icon">
-        <mat-icon>delete</mat-icon>
-      </button>
-      <button matFab disabled aria-label="Example icon button with a heart icon">
-        <mat-icon>favorite</mat-icon>
-      </button>
-    </div>
-  </div>
-</section>
-<mat-divider/>
-<section>
-  <div class="example-label">Mini FAB</div>
-  <div class="example-button-row">
-    <div class="example-flex-container">
-      <button matMiniFab aria-label="Example icon button with a menu icon">
-        <mat-icon>menu</mat-icon>
-      </button>
-      <button matMiniFab disabled aria-label="Example icon button with a home icon">
-        <mat-icon>home</mat-icon>
-      </button>
-    </div>
-  </div>
-</section>
-<mat-divider/>
-<section>
-  <div class="example-label">Extended FAB</div>
-  <div class="example-button-row">
-    <div class="example-flex-container">
-      <button matFab extended>
-        <mat-icon>favorite</mat-icon>
-        Basic
-      </button>
-      <button matFab extended disabled>
-        <mat-icon>favorite</mat-icon>
-        Disabled
-      </button>
-      <a matFab extended routerLink=".">
-        <mat-icon>favorite</mat-icon>
-        Link
-      </a>
-    </div>
-  </div>
-</section>
-    <router-outlet></router-outlet>
-  </div>
+<main 
+  role="main" 
+  aria-label="Main content area"
+  id="main-content">
+  
+  <!-- <div class="skip-link-target" tabindex="-1" id="content"></div> -->
+  
+  <router-outlet></router-outlet>
+  
 </main>
