--- a/src/app/features/pages/cycles/cycles.html
+++ b/src/app/features/pages/cycles/cycles.html
@@ -1,9 +1,35 @@
 <section class="content-wrapper" aria-live="polite">
   <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="center">
-    <mat-tab label="First">
+    <mat-tab label="ALL">
+      <div class="cycles-grid">
         <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+      </div>
     </mat-tab>
-    <mat-tab label="Second">Content 2</mat-tab>
-    <mat-tab label="Third">Content 3</mat-tab>
+    <mat-tab label="IN PROGRESS">
+      <div class="cycles-grid">
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+      </div>
+    </mat-tab>
+    <mat-tab label="COMPLETED">
+      <div class="cycles-grid">
+        <app-card></app-card>
+        <app-card></app-card>
+        <app-card></app-card>
+      </div>
+    </mat-tab>
+    <mat-tab label="CANCELLED">Content 3</mat-tab>
+    <mat-tab label="FAILED">Content 5</mat-tab>
   </mat-tab-group>
 </section>
