--- a/src/app/features/pages/home/home.html
+++ b/src/app/features/pages/home/home.html
@@ -44,6 +44,7 @@
       type="button"
       aria-label="Check your laundry cycles"
       title="Check out your active laundry cycles"
+      [routerLink]="['/cycles']"
     >
       Check Active Cycles
     </button>
