--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -1,6 +1,7 @@
 <footer>
   <mat-toolbar role="contentinfo" aria-label="Page navigation actions">
-    <!-- <button
+    @if(showBackButton()){
+    <button
       matButton="outlined"
       type="button"
       aria-label="Go back to previous step"
@@ -10,6 +11,8 @@
       <mat-icon aria-hidden="true">arrow_back</mat-icon>
       back
     </button>
+    }
+
     <button
       type="button"
       matButton="filled"
@@ -18,6 +21,6 @@
       (click)="onStartCycle()"
     >
       start new cycle
-    </button> -->
+    </button>
   </mat-toolbar>
 </footer>
