--- a/src/app/features/components/card.html
+++ b/src/app/features/components/card.html
@@ -1,46 +1,55 @@
 <mat-card class="cycle-card" appearance="outlined">
   <mat-card-header class="cycle-header">
     <div class="header-left">
-      <mat-icon class="machine-icon" aria-hidden="true">local_laundry_service</mat-icon>
-
       <div class="title-wrap">
-        <mat-card-title>Big washing machine</mat-card-title>
-        <mat-card-subtitle>Washer</mat-card-subtitle>
+        <mat-card-title>{{ cycle()?.DeviceName }}</mat-card-title>
+        <mat-card-subtitle>{{ cycle()?.DeviceType }}</mat-card-subtitle>
       </div>
+      <mat-chip-set>
+        <mat-chip [attr.data-status]="cycle()?.status" >{{ cycle()?.status }}</mat-chip>
+      </mat-chip-set>
     </div>
 
-    <mat-chip-set>
-      <mat-chip class="status failure" appearance="outlined">failure</mat-chip>
-    </mat-chip-set>
+    <mat-icon class="machine-icon" aria-hidden="true">{{
+      cycle()?.DeviceType === 'washer' ? 'local_laundry_service' : 'dry_cleaning'
+    }}</mat-icon>
   </mat-card-header>
 
   <mat-card-content class="cycle-body">
     <section class="details">
       <dl class="kv">
         <div class="row">
-          <dt>Started</dt><dd>25 Nov 2024, 12:01</dd>
+          <dt>Started</dt>
+          <dd>{{ cycle()?.startedAt | date : 'dd MMM yyyy, hh:mm a' }}</dd>
         </div>
         <div class="row">
-          <dt>Stopped</dt><dd>25 Nov 2024, 13:01</dd>
+          <dt>Stopped</dt>
+          <dd>{{ cycle()?.stoppedAt | date : 'dd MMM yyyy, hh:mm a' }}</dd>
         </div>
         <div class="row">
-          <dt>User</dt><dd>alex</dd>
+          <dt>User</dt>
+          <dd>{{ cycle()?.userId }}</dd>
         </div>
         <div class="row clamp">
           <dt>User agent</dt>
-          <dd title="iOS; iPhone XS; Version 13.3 (Build 17C45)) CFNetwork/1121.2.1 Darvin/19.3.0">
-            iOS; iPhone XS; Version 13.3 (Build 17C45)) CFNetwork/1121.2.1 Darvin/19.3.0
+          <dd [title]="cycle()?.userAgent">
+            {{ cycle()?.userAgent }}
           </dd>
         </div>
-        <div class="row meta"><dt>Device ID</dt><dd>48565</dd></div>
-        <div class="row meta"><dt>Cycle ID</dt><dd>1</dd></div>
-        <div class="row"><dt>Invoice</dt><dd>(0 lines)</dd></div>
+        <div class="row meta">
+          <dt>Device ID</dt>
+          <dd>{{ cycle()?.deviceId }}</dd>
+        </div>
+        <div class="row">
+          <dt>Invoice</dt>
+          <dd>({{ cycle()?.invoiceLines?.length }} lines)</dd>
+        </div>
       </dl>
     </section>
 
     <aside class="totals">
       <div class="total-label">Total</div>
-      <div class="total-value danger">€ 0.00</div>
+      <div class="total-value danger">€ {{ cycle()?.price | number : '1.2-2' }}</div>
     </aside>
   </mat-card-content>
 </mat-card>
