--- a/src/app/features/pages/home/home.html
+++ b/src/app/features/pages/home/home.html
@@ -24,6 +24,7 @@
       matButton="outlined"
       aria-label="Start new laundry cycle"
       title="Begin a new washing or drying cycle"
+      [routerLink]="['/start-cycle']"
     >
       start new cycle
     </button>
