--- a/src/app/layout/footer/footer.html
+++ b/src/app/layout/footer/footer.html
@@ -13,6 +13,7 @@
     </button>
     }
 
+    @if(showStartCycleButton()){
     <button
       type="button"
       matButton="filled"
@@ -22,5 +23,6 @@
     >
       start new cycle
     </button>
+    }
   </mat-toolbar>
 </footer>
