--- a/src/app/layout/header/header.html
+++ b/src/app/layout/header/header.html
@@ -5,8 +5,7 @@
       class="logo-link"
       aria-label="Miele homepage - Go to main Miele website"
       title="Visit Miele homepage"
-      rel="external"
-      target="_blank"
+      [routerLink]="['/']"
     >
       <img
         src="assets/logos/miele-logo.svg"
