--- a/src/app/layout/main/main.html
+++ b/src/app/layout/main/main.html
@@ -1,10 +1,3 @@
-<main 
-  role="main" 
-  aria-label="Main content area"
-  id="main-content">
-  
-  <!-- <div class="skip-link-target" tabindex="-1" id="content"></div> -->
-  
+<main role="main" aria-label="Main content area" id="main-content">
   <router-outlet></router-outlet>
-  
 </main>
